// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateUpdateSecret Create File Secret 1`] = `
<div>
   
  <div
    class="OverlaySpinner---overlaySpinner--3Bs3"
  >
    <form
      class="FormikForm---main--1N87"
    >
      <div>
        <div
          class="bp3-form-group"
          data-id="secretManagerIdentifier-0"
        >
          <label
            class="bp3-label"
            for="secretManagerIdentifier"
          >
            Secrets Manager*
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-popover-wrapper Select---main--1QpB bp3-fill"
            >
              <div
                class="bp3-popover-target"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="secretManagerIdentifier"
                    placeholder="Search..."
                    style="padding-right: 0px;"
                    type="text"
                    value="Harness Secrets Manager"
                  />
                  <span
                    class="bp3-input-action"
                  >
                    <span
                      class="bp3-icon bp3-icon-caret-down StyledProps---main--1Wws StyledProps---padding-small--3f0A"
                      icon="caret-down"
                    >
                      <svg
                        data-icon="caret-down"
                        height="14"
                        viewBox="0 0 16 16"
                        width="14"
                      >
                        <desc>
                          caret-down
                        </desc>
                        <path
                          d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="InputWithIdentifier---txtNameContainer--20iZ"
        >
          <div
            class="Layout---horizontal--3rmQ StyledProps---main--1Wws InputWithIdentifier---txtIdContainer--2Ozd"
          >
            <p
              class="StyledProps---font--2ipy StyledProps---main--1Wws"
            >
              ID
              :
            </p>
            <span
              class="InputWithIdentifier---idInput--w8_T"
              contenteditable="true"
            />
            <span
              class="bp3-icon bp3-icon-edit StyledProps---main--1Wws"
              icon="edit"
              style="vertical-align: middle;"
            >
              <svg
                data-icon="edit"
                height="12"
                viewBox="0 0 16 16"
                width="12"
              >
                <desc>
                  edit
                </desc>
                <path
                  d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
          <div
            class="bp3-form-group"
            data-id="name-1"
          >
            <label
              class="bp3-label"
              for="name"
            >
              Secret Name*
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="bp3-input-group"
              >
                <input
                  autocomplete="off"
                  class="bp3-input"
                  name="name"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="bp3-form-group"
          data-id="file-2"
        >
          <label
            class="bp3-label"
            for="file"
          >
            Select File
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <label
              class="bp3-file-input bp3-fill"
            >
              <input
                multiple=""
                name="file"
                type="file"
              />
              <span
                bp3-button-text="Browse"
                class="bp3-file-upload-input bp3-file-upload-input-custom-text"
              >
                Choose file...
              </span>
            </label>
          </div>
        </div>
        <div
          class="bp3-form-group"
          data-id="description-3"
        >
          <label
            class="bp3-label"
            for="description"
          >
            Description
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <textarea
              autocomplete="off"
              class="bp3-input bp3-fill"
              name="description"
            />
          </div>
        </div>
        <button
          class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-primary--2Xgi StyledProps---margin-top-large--1oBg"
          type="submit"
        >
          <span
            class="bp3-button-text"
          >
            Save
          </span>
        </button>
      </div>
    </form>
  </div>
   
</div>
`;

exports[`CreateUpdateSecret Create Text Secret 1`] = `
<div>
   
  <div
    class="OverlaySpinner---overlaySpinner--3Bs3"
  >
    <form
      class="FormikForm---main--1N87"
    >
      <div>
        <div
          class="bp3-form-group"
          data-id="secretManagerIdentifier-0"
        >
          <label
            class="bp3-label"
            for="secretManagerIdentifier"
          >
            Secrets Manager*
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-popover-wrapper Select---main--1QpB bp3-fill"
            >
              <div
                class="bp3-popover-target"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="secretManagerIdentifier"
                    placeholder="Search..."
                    style="padding-right: 0px;"
                    type="text"
                    value="Harness Secrets Manager"
                  />
                  <span
                    class="bp3-input-action"
                  >
                    <span
                      class="bp3-icon bp3-icon-caret-down StyledProps---main--1Wws StyledProps---padding-small--3f0A"
                      icon="caret-down"
                    >
                      <svg
                        data-icon="caret-down"
                        height="14"
                        viewBox="0 0 16 16"
                        width="14"
                      >
                        <desc>
                          caret-down
                        </desc>
                        <path
                          d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="InputWithIdentifier---txtNameContainer--20iZ"
        >
          <div
            class="Layout---horizontal--3rmQ StyledProps---main--1Wws InputWithIdentifier---txtIdContainer--2Ozd"
          >
            <p
              class="StyledProps---font--2ipy StyledProps---main--1Wws"
            >
              ID
              :
            </p>
            <span
              class="InputWithIdentifier---idInput--w8_T"
              contenteditable="true"
            />
            <span
              class="bp3-icon bp3-icon-edit StyledProps---main--1Wws"
              icon="edit"
              style="vertical-align: middle;"
            >
              <svg
                data-icon="edit"
                height="12"
                viewBox="0 0 16 16"
                width="12"
              >
                <desc>
                  edit
                </desc>
                <path
                  d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
          <div
            class="bp3-form-group"
            data-id="name-1"
          >
            <label
              class="bp3-label"
              for="name"
            >
              Secret Name*
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="bp3-input-group"
              >
                <input
                  autocomplete="off"
                  class="bp3-input"
                  name="name"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="bp3-form-group"
          data-id="value-2"
        >
          <label
            class="bp3-label"
            for="value"
          >
            Secret Value*
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input-group"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                name="value"
                placeholder="Add your secret value"
                type="password"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="bp3-form-group"
          data-id="description-3"
        >
          <label
            class="bp3-label"
            for="description"
          >
            Description
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <textarea
              autocomplete="off"
              class="bp3-input bp3-fill"
              name="description"
            />
          </div>
        </div>
        <button
          class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-primary--2Xgi StyledProps---margin-top-large--1oBg"
          type="submit"
        >
          <span
            class="bp3-button-text"
          >
            Save
          </span>
        </button>
      </div>
    </form>
  </div>
   
</div>
`;

exports[`CreateUpdateSecret Update Text Secret 1`] = `
<div>
   
  <div
    class="OverlaySpinner---overlaySpinner--3Bs3"
  >
    <form
      class="FormikForm---main--1N87"
    >
      <div>
        <div
          class="bp3-form-group bp3-disabled"
          data-id="secretManagerIdentifier-0"
        >
          <label
            class="bp3-label"
            for="secretManagerIdentifier"
          >
            Secrets Manager*
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-popover-wrapper Select---main--1QpB bp3-fill"
            >
              <div
                class="bp3-popover-target"
              >
                <div
                  class="bp3-input-group bp3-disabled"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    disabled=""
                    name="secretManagerIdentifier"
                    placeholder="Search..."
                    style="padding-right: 0px;"
                    type="text"
                    value="vault1"
                  />
                  <span
                    class="bp3-input-action"
                  >
                    <span
                      class="bp3-icon bp3-icon-caret-down StyledProps---main--1Wws StyledProps---padding-small--3f0A"
                      icon="caret-down"
                    >
                      <svg
                        data-icon="caret-down"
                        height="14"
                        viewBox="0 0 16 16"
                        width="14"
                      >
                        <desc>
                          caret-down
                        </desc>
                        <path
                          d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="InputWithIdentifier---txtNameContainer--20iZ"
        >
          <div
            class="Layout---horizontal--3rmQ StyledProps---main--1Wws InputWithIdentifier---txtIdContainer--2Ozd"
          >
            <p
              class="StyledProps---font--2ipy StyledProps---main--1Wws"
            >
              ID
              :
            </p>
            <span
              class="InputWithIdentifier---idInput--w8_T"
              contenteditable="false"
              disabled=""
            >
              text1
            </span>
          </div>
          <div
            class="bp3-form-group"
            data-id="name-1"
          >
            <label
              class="bp3-label"
              for="name"
            >
              Secret Name*
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="bp3-input-group"
              >
                <input
                  autocomplete="off"
                  class="bp3-input"
                  name="name"
                  type="text"
                  value="text1"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="bp3-form-group"
          data-id="valueType-2"
        >
          <div
            class="bp3-form-content"
          >
            <div>
              <label
                class="bp3-control bp3-radio bp3-inline Radio---radio--3bxG"
              >
                <input
                  checked=""
                  name="valueType"
                  type="radio"
                  value="Inline"
                />
                <span
                  class="bp3-control-indicator"
                />
                Inline Secret Value
              </label>
              <label
                class="bp3-control bp3-radio bp3-inline Radio---radio--3bxG"
              >
                <input
                  name="valueType"
                  type="radio"
                  value="Reference"
                />
                <span
                  class="bp3-control-indicator"
                />
                Reference Secret
              </label>
            </div>
          </div>
        </div>
        <div
          class="bp3-form-group"
          data-id="value-3"
        >
          <label
            class="bp3-label"
            for="value"
          >
            Secret Value*
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input-group"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                name="value"
                placeholder="Encrypted"
                type="password"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="bp3-form-group"
          data-id="description-4"
        >
          <label
            class="bp3-label"
            for="description"
          >
            Description
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <textarea
              autocomplete="off"
              class="bp3-input bp3-fill"
              name="description"
            >
              desc
            </textarea>
          </div>
        </div>
        <button
          class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-primary--2Xgi StyledProps---margin-top-large--1oBg"
          type="submit"
        >
          <span
            class="bp3-button-text"
          >
            Save
          </span>
        </button>
      </div>
    </form>
  </div>
   
</div>
`;
